Fixed particles to completely show on mobile view

--- a/css/fixed.css
+++ b/css/fixed.css
@@ -41,8 +41,8 @@
 /*    transition: 1s opacity;*/
 /*}*/
 body{
-    margin:0;
-    font:normal 75% Arial, Helvetica, sans-serif;
+    /*margin:0;*/
+    /*font:normal 75% Arial, Helvetica, sans-serif;*/
 }
 
 canvas {
@@ -53,12 +53,9 @@ canvas {
 #particles-js{
     position:relative;
     width: 100%;
+    height: 100vmax !important;
     min-height: 100vh;
     background-color: #232741;
-    /*background-image: url("http://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/NASA_logo.svg/1237px-NASA_logo.svg.png");*/
-    /*background-repeat: no-repeat;*/
-    /*background-size: 20%;*/
-    /*background-position: 50% 50%;*/
 }
 
 .count-particles{
